--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -8,6 +8,7 @@
     <property name="title" translatable="yes">Configure feedback</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
+    <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_delete_event" swapped="no"/>
     <child>
       <widget class="GtkVBox" id="vbox95">
