--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -3540,6 +3540,17 @@
                 <property name="position">2</property>
               </packing>
             </child>
+            <child>
+              <widget class="GtkLabel" id="label_test_sound_result">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
           </widget>
           <packing>
             <property name="expand">False</property>
